--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,73 @@
+html,
+body {
+  min-height: 100vh;
+  padding: 0;
+  margin: 0;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background: linear-gradient(250deg, #7b2ff7, #f107a3);
+  background-repeat: no-repeat;
+}
+
 .App {
   font-family: sans-serif;
   text-align: center;
+}
+
+.container {
+  display: flex;
+  width: 100vw;
+  height: 100%;
+  align-items: stretch;
+  justify-content: stretch;
+}
+.column {
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  align-items: stretch;
+  justify-content: stretch;
+}
+
+.sub-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.box {
+  border-radius: 10px;
+  position: relative;
+  z-index: 1;
+}
+
+.overlay {
+  position: absolute;
+  top: 50px;
+  left: 50px;
+  bottom: 50px;
+  right: 50px;
+  background: black;
+  opacity: 0.5;
+  border-radius: 50px;
+}
+
+.logo {
+  position: absolute;
+  z-index: 1;
+  pointer-events: none;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
